fix: position for horizontal scroll

--- a/src/ui/components/time-indicator/time-indicator.module.scss
+++ b/src/ui/components/time-indicator/time-indicator.module.scss
@@ -1,5 +1,5 @@
 .container {
-    position: absolute;
+    position: sticky;
     display: flex;
     align-items: center;
     left: 0;
